# x509-verifier

./: Cargo.toml  README.md
assets/cert_chain_verify/bad_cert/: ca.crt  cert.crt  server.key
assets/cert_chain_verify/ecdsa_root_ca/: ca.crt  ca.key
assets/cert_chain_verify/google/: cert.crt
assets/cert_chain_verify/rsa_root_ca/: ca.crt  ca.key
assets/cert_chain_verify/simple/: ca.crt  server.crt  server.key
src/: certpool.rs  error.rs  lib.rs  traits.rs  verify.rs
src/algorithm/: ecdsa.rs  ed25519.rs  identifiers.rs  mod.rs  rsa.rs
src/types/: key_usage.rs  mod.rs  trust_anchor.rs
src/verify/: key_usage.rs  options.rs  path.rs
src/verify/name_constraints/: domain.rs  ip_address.rs  mod.rs
tests/: cert_chain_verify.rs
