[package]
name = "x509-verifier"
version = "0.0.0"
edition = "2021"

[dependencies]
const-oid = { version = "0.9.6", features = ["db"] }
der = { version = "0.7.9", features = ["derive"] }
digest = "0.10.7"
ecdsa = { version = "0.16.9", features = ["verifying", "pkcs8", "der"] }
ed25519-dalek = { version = "2.1.1", features = ["signature", "pkcs8", "digest"] }
p256 = "0.13.2"
p384 = "0.13.0"
p521 = "0.13.3"
pkcs8 = "0.10.2"
rsa = "0.9.6"
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
static_assertions = "1.1.0"
x509-cert = "0.2.5"
x509-ocsp = { version = "0.2.1", features = ["std", "builder"] }

[patch.crates-io]
# See: https://github.com/RustCrypto/signatures/pull/823
ecdsa = { git = "https://github.com/Leo1003/signatures", branch = "pr-823-backports" }
